Address safari scroll jump issue when removing homepage hero

--- a/web/src/assets/style/_utils.scss
+++ b/web/src/assets/style/_utils.scss
@@ -2,6 +2,11 @@
 	text-align: center;
 }
 
+.scroll-locked {
+  overflow: hidden;
+  position: fixed;
+}
+
 .space-bottom {
 	margin-bottom: var(--space);
 }
